infrastructure/authentification-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  labels:
    app: auth-service
spec:
  selector:
      app: auth-service
  ports:
  - port: 80
    protocol: TCP
    targetPort: 5000
  type: ClusterIP
