infrastructure/authentification-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /authentification
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:
              number: 80
